infrastructure/backend/base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nestjs
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: nestjs
    app.kubernetes.io/name: nestjs
    app.kubernetes.io/part-of: fullstack-website
  namespace: nestjs
