infrastructure/backend/base/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: nestjs
    app.kubernetes.io/name: nestjs
    app.kubernetes.io/part-of: fullstack-website
  name: gofiber
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestjs
                port:
                  name: http
